corpus/cpp/overload/case-02/snapshots/gcc15/render.concise.txt
error: type or overload mismatch
--> src/main.cpp:3:49
help: compare the expected type and actual argument at the call site
why: invalid conversion from 'const char*' to 'int'
| src/main.cpp:3:49
| int main() { const char *value = "x"; takes_int(value); }
|                                                 ^
note: initializing argument 1 of 'void takes_int(int)'
--> src/main.cpp:1:16
note: wrapper confidence is low; verify against the preserved raw diagnostics
why: initializing argument 1 of 'void takes_int(int)'
| src/main.cpp:1:16
| void takes_int(int);
note: omitted additional details; rerun with --formed-profile=verbose